--- a/Simpro/Simpro.vcxproj
+++ b/Simpro/Simpro.vcxproj
@@ -15,9 +15,11 @@
     <ClInclude Include="src\Simpro\Application.h" />
     <ClInclude Include="src\Simpro\Core.h" />
     <ClInclude Include="src\Simpro\EntryPoint.h" />
+    <ClInclude Include="src\Simpro\Log.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Simpro\Application.cpp" />
+    <ClCompile Include="src\Simpro\Log.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
@@ -66,6 +68,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>SP_PLATFORM_WINDOWS;SP_BUILD_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)Simpro\vendor\spdlog\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -80,6 +83,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>SP_PLATFORM_WINDOWS;SP_BUILD_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)Simpro\vendor\spdlog\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
