--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Simpro/vendor/spdlog"]
 	path = Simpro/vendor/spdlog
 	url = git@github.com:gabime/spdlog.git
+[submodule "Ahsan/vendor/GLFW"]
+	path = Ahsan/vendor/GLFW
+	url = https://github.com/harisspace/glfw
